deploy_kubernetes/preprod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: civil-appeal-case-tracker
  namespace: civil-appeal-case-tracker-preprod
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    external-dns.alpha.kubernetes.io/set-identifier: civil-appeal-case-tracker-civil-appeal-case-tracker-preprod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=dts-legacy"
      SecRule REQUEST_HEADERS:User-Agent "@contains Amazonbot" "phase:1,log,deny,id:1000000"
      SecRule REQUEST_HEADERS:User-Agent "@contains gptbot" "phase:1,log,deny,id:1000001"
      SecRule REQUEST_HEADERS:User-Agent "@contains crawler" "phase:1,log,deny,id:1000002"
      SecRule REQUEST_HEADERS:User-Agent "@rx bing(bot|bot/2\.0|\.com)" "phase:1,log,deny,t:lowercase,id:1000003"
      SecRule REQUEST_HEADERS:User-Agent "@rx politico(-eu|-bot|bot@politico\.eu)" "phase:1,log,deny,t:lowercase,id:1000004"
      SecRule REQUEST_HEADERS:User-Agent "@rx awario(smartbot|bots@awario\.com)" "phase:1,log,deny,t:lowercase,id:1000005"
      SecRule REQUEST_HEADERS:User-Agent "@rx https://openai\.com/bot" "phase:1,log,deny,t:lowercase,id:1000006"
      SecRule REQUEST_HEADERS:User-Agent "@rx http://mj12bot.com/" "phase:1,log,deny,t:lowercase,id:1000007"
    nginx.ingress.kubernetes.io/whitelist-source-range: >-
      194.33.196.0/24, 
      194.33.192.0/24, 
      51.149.249.0/29, 
      51.149.249.32/29, 
      51.149.250.0/24, 
      81.153.123.31/32, 
      90.209.17.46/32, 
      5.151.166.193/32, 
      94.192.178.93/32,
      52.167.144.219/32,
      128.77.75.64/26,
      88.97.206.141/32
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "{\"msg\":\"<br/>Civil Appeal Case Tracker<br/>This is a restricted page. Please contact dts-legacy-apps-support-team@hmcts.net for access<br/>\"}";
      }
      error_page 403 @custom_403;
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - preprod.casetracker.justice.gov.uk
      secretName: casetracker-justice-app-secret
  rules:
    - host: preprod.casetracker.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: civil-appeal-case-tracker-app-service
                port:
                  number: 80
