deploy_kubernetes/preprod/cact-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: civil-appeal-case-tracker-prometheus-scraping
  namespace: civil-appeal-case-tracker-preprod
spec:
  podSelector:
    matchLabels:
      app: civil-appeal-case-tracker-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              component: monitoring
